CS442/Assignment2/y.output
Grammar

    0 $accept: Prog $end

    1 Prog: Declarations StmtSeq

    2 Declarations: Dec Declarations
    3             | %empty

    4 Dec: VarDecl
    5    | FuncDecl

    6 VarDecl: TypeSpecifier VarDeclId ';'

    7 VarDeclId: Id
    8          | Id '[' AryNumber ']'

    9 FuncDecl: TypeSpecifier Id '(' FuncParams ')' Declarations '{' StmtSeq '}'
   10         | TypeSpecifier Id '(' ')' Declarations '{' StmtSeq '}'

   11 FuncParams: FuncParams ',' FuncDec
   12           | FuncDec

   13 FuncDec: TypeSpecifier Id
   14        | TypeSpecifier Id '[' ']'

   15 TypeSpecifier: Int
   16              | Bool
   17              | Float

   18 StmtSeq: Stmt StmtSeq
   19        | %empty

   20 Stmt: PrintStmt
   21     | ReadStmt
   22     | ReturnStmt
   23     | PickStmt
   24     | IterStmt
   25     | AssignStmt

   26 PrintStmt: Print '(' ExprSeq ')' ';'
   27          | PrintStr '(' Expr ')' ';'
   28          | Println '(' ')' ';'
   29          | Printsp '(' Expr ')' ';'
   30          | Write Expr ';'

   31 ExprSeq: Expr
   32        | '&' Expr
   33        | ExprSeq ',' Expr

   34 ReadStmt: Read '(' IdSeq ')' ';'

   35 IdSeq: IdItem
   36      | IdSeq ',' IdItem

   37 IdItem: Id
   38       | Id '[' Expr ']'

   39 ReturnStmt: Return Expr ';'

   40 AssignStmt: Id '[' Expr ']' '=' Expr ';'
   41           | Id '=' Expr ';'

   42 PickStmt: IF '(' Expr ')' '{' StmtSeq '}'
   43         | IF '(' Expr ')' '{' StmtSeq '}' ELSE '{' StmtSeq '}'

   44 IterStmt: WHILE '(' Expr ')' '{' StmtSeq '}'

   45 Expr: BOExpr

   46 BOExpr: BOExpr OR BAExpr
   47       | BAExpr

   48 BAExpr: BAExpr AND BExpr
   49       | BExpr

   50 BExpr: OExpr
   51      | BExpr REOP OExpr

   52 REOP: EQ
   53     | NEQ

   54 OExpr: Basic
   55      | OExpr RCOP Basic

   56 RCOP: '<'
   57     | '>'
   58     | LTE
   59     | GTE

   60 Basic: Term
   61      | Basic ABOP Term

   62 ABOP: '+'
   63     | '-'

   64 Term: Factor
   65     | Term ATOP Factor

   66 ATOP: '*'
   67     | '/'
   68     | '%'

   69 Factor: Expo
   70       | Expo AFOP Factor

   71 AFOP: '^'

   72 Expo: PStmt
   73     | ANOP Expo
   74     | RNOP Expo

   75 ANOP: '-'

   76 RNOP: '!'

   77 PStmt: Literal
   78      | '(' Expr ')'
   79      | Id '[' Expr ']'
   80      | Id '(' ExprSeq ')'
   81      | Id '(' ')'

   82 Literal: IntLit
   83        | BoolLit
   84        | FloatLit
   85        | StrLit
   86        | Ident

   87 Id: Ident

   88 AryNumber: IntLit


Terminals, with rules where they appear

$end (0) 0
'!' (33) 76
'%' (37) 68
'&' (38) 32
'(' (40) 9 10 26 27 28 29 34 42 43 44 78 80 81
')' (41) 9 10 26 27 28 29 34 42 43 44 78 80 81
'*' (42) 66
'+' (43) 62
',' (44) 11 33 36
'-' (45) 63 75
'/' (47) 67
';' (59) 6 26 27 28 29 30 34 39 40 41
'<' (60) 56
'=' (61) 40 41
'>' (62) 57
'[' (91) 8 14 38 40 79
']' (93) 8 14 38 40 79
'^' (94) 71
'{' (123) 9 10 42 43 44
'}' (125) 9 10 42 43 44
error (256)
Ident (258) 86 87
IntLit (259) 82 88
BoolLit (260) 83
StrLit (261) 85
FloatLit (262) 84
Read (263) 34
Int (264) 15
Bool (265) 16
Float (266) 17
EQ (267) 52
NEQ (268) 53
LTE (269) 58
GTE (270) 59
AND (271) 48
OR (272) 46
Write (273) 30
Print (274) 26
Println (275) 28
Printsp (276) 29
PrintStr (277) 27
IF (278) 42 43
ELSE (279) 43
WHILE (280) 44
Return (281) 39


Nonterminals, with rules where they appear

$accept (46)
    on left: 0
Prog (47)
    on left: 1, on right: 0
Declarations (48)
    on left: 2 3, on right: 1 2 9 10
Dec (49)
    on left: 4 5, on right: 2
VarDecl (50)
    on left: 6, on right: 4
VarDeclId (51)
    on left: 7 8, on right: 6
FuncDecl (52)
    on left: 9 10, on right: 5
FuncParams (53)
    on left: 11 12, on right: 9 11
FuncDec (54)
    on left: 13 14, on right: 11 12
TypeSpecifier (55)
    on left: 15 16 17, on right: 6 9 10 13 14
StmtSeq (56)
    on left: 18 19, on right: 1 9 10 18 42 43 44
Stmt (57)
    on left: 20 21 22 23 24 25, on right: 18
PrintStmt (58)
    on left: 26 27 28 29 30, on right: 20
ExprSeq (59)
    on left: 31 32 33, on right: 26 33 80
ReadStmt (60)
    on left: 34, on right: 21
IdSeq (61)
    on left: 35 36, on right: 34 36
IdItem (62)
    on left: 37 38, on right: 35 36
ReturnStmt (63)
    on left: 39, on right: 22
AssignStmt (64)
    on left: 40 41, on right: 25
PickStmt (65)
    on left: 42 43, on right: 23
IterStmt (66)
    on left: 44, on right: 24
Expr (67)
    on left: 45, on right: 27 29 30 31 32 33 38 39 40 41 42 43 44 78
    79
BOExpr (68)
    on left: 46 47, on right: 45 46
BAExpr (69)
    on left: 48 49, on right: 46 47 48
BExpr (70)
    on left: 50 51, on right: 48 49 51
REOP (71)
    on left: 52 53, on right: 51
OExpr (72)
    on left: 54 55, on right: 50 51 55
RCOP (73)
    on left: 56 57 58 59, on right: 55
Basic (74)
    on left: 60 61, on right: 54 55 61
ABOP (75)
    on left: 62 63, on right: 61
Term (76)
    on left: 64 65, on right: 60 61 65
ATOP (77)
    on left: 66 67 68, on right: 65
Factor (78)
    on left: 69 70, on right: 64 65 70
AFOP (79)
    on left: 71, on right: 70
Expo (80)
    on left: 72 73 74, on right: 69 70 73 74
ANOP (81)
    on left: 75, on right: 73
RNOP (82)
    on left: 76, on right: 74
PStmt (83)
    on left: 77 78 79 80 81, on right: 72
Literal (84)
    on left: 82 83 84 85 86, on right: 77
Id (85)
    on left: 87, on right: 7 8 9 10 13 14 37 38 40 41 79 80 81
AryNumber (86)
    on left: 88, on right: 8


State 0

    0 $accept: . Prog $end

    Int    shift, and go to state 1
    Bool   shift, and go to state 2
    Float  shift, and go to state 3

    $default  reduce using rule 3 (Declarations)

    Prog           go to state 4
    Declarations   go to state 5
    Dec            go to state 6
    VarDecl        go to state 7
    FuncDecl       go to state 8
    TypeSpecifier  go to state 9


State 1

   15 TypeSpecifier: Int .

    $default  reduce using rule 15 (TypeSpecifier)


State 2

   16 TypeSpecifier: Bool .

    $default  reduce using rule 16 (TypeSpecifier)


State 3

   17 TypeSpecifier: Float .

    $default  reduce using rule 17 (TypeSpecifier)


State 4

    0 $accept: Prog . $end

    $end  shift, and go to state 10


State 5

    1 Prog: Declarations . StmtSeq

    Ident     shift, and go to state 11
    Read      shift, and go to state 12
    Write     shift, and go to state 13
    Print     shift, and go to state 14
    Println   shift, and go to state 15
    Printsp   shift, and go to state 16
    PrintStr  shift, and go to state 17
    IF        shift, and go to state 18
    WHILE     shift, and go to state 19
    Return    shift, and go to state 20

    $default  reduce using rule 19 (StmtSeq)

    StmtSeq     go to state 21
    Stmt        go to state 22
    PrintStmt   go to state 23
    ReadStmt    go to state 24
    ReturnStmt  go to state 25
    AssignStmt  go to state 26
    PickStmt    go to state 27
    IterStmt    go to state 28
    Id          go to state 29


State 6

    2 Declarations: Dec . Declarations

    Int    shift, and go to state 1
    Bool   shift, and go to state 2
    Float  shift, and go to state 3

    $default  reduce using rule 3 (Declarations)

    Declarations   go to state 30
    Dec            go to state 6
    VarDecl        go to state 7
    FuncDecl       go to state 8
    TypeSpecifier  go to state 9


State 7

    4 Dec: VarDecl .

    $default  reduce using rule 4 (Dec)


State 8

    5 Dec: FuncDecl .

    $default  reduce using rule 5 (Dec)


State 9

    6 VarDecl: TypeSpecifier . VarDeclId ';'
    9 FuncDecl: TypeSpecifier . Id '(' FuncParams ')' Declarations '{' StmtSeq '}'
   10         | TypeSpecifier . Id '(' ')' Declarations '{' StmtSeq '}'

    Ident  shift, and go to state 11

    VarDeclId  go to state 31
    Id         go to state 32


State 10

    0 $accept: Prog $end .

    $default  accept


State 11

   87 Id: Ident .

    $default  reduce using rule 87 (Id)


State 12

   34 ReadStmt: Read . '(' IdSeq ')' ';'

    '('  shift, and go to state 33


State 13

   30 PrintStmt: Write . Expr ';'

    Ident     shift, and go to state 34
    IntLit    shift, and go to state 35
    BoolLit   shift, and go to state 36
    StrLit    shift, and go to state 37
    FloatLit  shift, and go to state 38
    '('       shift, and go to state 39
    '-'       shift, and go to state 40
    '!'       shift, and go to state 41

    Expr     go to state 42
    BOExpr   go to state 43
    BAExpr   go to state 44
    BExpr    go to state 45
    OExpr    go to state 46
    Basic    go to state 47
    Term     go to state 48
    Factor   go to state 49
    Expo     go to state 50
    ANOP     go to state 51
    RNOP     go to state 52
    PStmt    go to state 53
    Literal  go to state 54
    Id       go to state 55


State 14

   26 PrintStmt: Print . '(' ExprSeq ')' ';'

    '('  shift, and go to state 56


State 15

   28 PrintStmt: Println . '(' ')' ';'

    '('  shift, and go to state 57


State 16

   29 PrintStmt: Printsp . '(' Expr ')' ';'

    '('  shift, and go to state 58


State 17

   27 PrintStmt: PrintStr . '(' Expr ')' ';'

    '('  shift, and go to state 59


State 18

   42 PickStmt: IF . '(' Expr ')' '{' StmtSeq '}'
   43         | IF . '(' Expr ')' '{' StmtSeq '}' ELSE '{' StmtSeq '}'

    '('  shift, and go to state 60


State 19

   44 IterStmt: WHILE . '(' Expr ')' '{' StmtSeq '}'

    '('  shift, and go to state 61


State 20

   39 ReturnStmt: Return . Expr ';'

    Ident     shift, and go to state 34
    IntLit    shift, and go to state 35
    BoolLit   shift, and go to state 36
    StrLit    shift, and go to state 37
    FloatLit  shift, and go to state 38
    '('       shift, and go to state 39
    '-'       shift, and go to state 40
    '!'       shift, and go to state 41

    Expr     go to state 62
    BOExpr   go to state 43
    BAExpr   go to state 44
    BExpr    go to state 45
    OExpr    go to state 46
    Basic    go to state 47
    Term     go to state 48
    Factor   go to state 49
    Expo     go to state 50
    ANOP     go to state 51
    RNOP     go to state 52
    PStmt    go to state 53
    Literal  go to state 54
    Id       go to state 55


State 21

    1 Prog: Declarations StmtSeq .

    $default  reduce using rule 1 (Prog)


State 22

   18 StmtSeq: Stmt . StmtSeq

    Ident     shift, and go to state 11
    Read      shift, and go to state 12
    Write     shift, and go to state 13
    Print     shift, and go to state 14
    Println   shift, and go to state 15
    Printsp   shift, and go to state 16
    PrintStr  shift, and go to state 17
    IF        shift, and go to state 18
    WHILE     shift, and go to state 19
    Return    shift, and go to state 20

    $default  reduce using rule 19 (StmtSeq)

    StmtSeq     go to state 63
    Stmt        go to state 22
    PrintStmt   go to state 23
    ReadStmt    go to state 24
    ReturnStmt  go to state 25
    AssignStmt  go to state 26
    PickStmt    go to state 27
    IterStmt    go to state 28
    Id          go to state 29


State 23

   20 Stmt: PrintStmt .

    $default  reduce using rule 20 (Stmt)


State 24

   21 Stmt: ReadStmt .

    $default  reduce using rule 21 (Stmt)


State 25

   22 Stmt: ReturnStmt .

    $default  reduce using rule 22 (Stmt)


State 26

   25 Stmt: AssignStmt .

    $default  reduce using rule 25 (Stmt)


State 27

   23 Stmt: PickStmt .

    $default  reduce using rule 23 (Stmt)


State 28

   24 Stmt: IterStmt .

    $default  reduce using rule 24 (Stmt)


State 29

   40 AssignStmt: Id . '[' Expr ']' '=' Expr ';'
   41           | Id . '=' Expr ';'

    '['  shift, and go to state 64
    '='  shift, and go to state 65


State 30

    2 Declarations: Dec Declarations .

    $default  reduce using rule 2 (Declarations)


State 31

    6 VarDecl: TypeSpecifier VarDeclId . ';'

    ';'  shift, and go to state 66


State 32

    7 VarDeclId: Id .
    8          | Id . '[' AryNumber ']'
    9 FuncDecl: TypeSpecifier Id . '(' FuncParams ')' Declarations '{' StmtSeq '}'
   10         | TypeSpecifier Id . '(' ')' Declarations '{' StmtSeq '}'

    '['  shift, and go to state 67
    '('  shift, and go to state 68

    $default  reduce using rule 7 (VarDeclId)


State 33

   34 ReadStmt: Read '(' . IdSeq ')' ';'

    Ident  shift, and go to state 11

    IdSeq   go to state 69
    IdItem  go to state 70
    Id      go to state 71


State 34

   86 Literal: Ident .
   87 Id: Ident .

    '['       reduce using rule 87 (Id)
    '('       reduce using rule 87 (Id)
    $default  reduce using rule 86 (Literal)


State 35

   82 Literal: IntLit .

    $default  reduce using rule 82 (Literal)


State 36

   83 Literal: BoolLit .

    $default  reduce using rule 83 (Literal)


State 37

   85 Literal: StrLit .

    $default  reduce using rule 85 (Literal)


State 38

   84 Literal: FloatLit .

    $default  reduce using rule 84 (Literal)


State 39

   78 PStmt: '(' . Expr ')'

    Ident     shift, and go to state 34
    IntLit    shift, and go to state 35
    BoolLit   shift, and go to state 36
    StrLit    shift, and go to state 37
    FloatLit  shift, and go to state 38
    '('       shift, and go to state 39
    '-'       shift, and go to state 40
    '!'       shift, and go to state 41

    Expr     go to state 72
    BOExpr   go to state 43
    BAExpr   go to state 44
    BExpr    go to state 45
    OExpr    go to state 46
    Basic    go to state 47
    Term     go to state 48
    Factor   go to state 49
    Expo     go to state 50
    ANOP     go to state 51
    RNOP     go to state 52
    PStmt    go to state 53
    Literal  go to state 54
    Id       go to state 55


State 40

   75 ANOP: '-' .

    $default  reduce using rule 75 (ANOP)


State 41

   76 RNOP: '!' .

    $default  reduce using rule 76 (RNOP)


State 42

   30 PrintStmt: Write Expr . ';'

    ';'  shift, and go to state 73


State 43

   45 Expr: BOExpr .
   46 BOExpr: BOExpr . OR BAExpr

    OR  shift, and go to state 74

    $default  reduce using rule 45 (Expr)


State 44

   47 BOExpr: BAExpr .
   48 BAExpr: BAExpr . AND BExpr

    AND  shift, and go to state 75

    $default  reduce using rule 47 (BOExpr)


State 45

   49 BAExpr: BExpr .
   51 BExpr: BExpr . REOP OExpr

    EQ   shift, and go to state 76
    NEQ  shift, and go to state 77

    $default  reduce using rule 49 (BAExpr)

    REOP  go to state 78


State 46

   50 BExpr: OExpr .
   55 OExpr: OExpr . RCOP Basic

    LTE  shift, and go to state 79
    GTE  shift, and go to state 80
    '<'  shift, and go to state 81
    '>'  shift, and go to state 82

    $default  reduce using rule 50 (BExpr)

    RCOP  go to state 83


State 47

   54 OExpr: Basic .
   61 Basic: Basic . ABOP Term

    '+'  shift, and go to state 84
    '-'  shift, and go to state 85

    $default  reduce using rule 54 (OExpr)

    ABOP  go to state 86


State 48

   60 Basic: Term .
   65 Term: Term . ATOP Factor

    '*'  shift, and go to state 87
    '/'  shift, and go to state 88
    '%'  shift, and go to state 89

    $default  reduce using rule 60 (Basic)

    ATOP  go to state 90


State 49

   64 Term: Factor .

    $default  reduce using rule 64 (Term)


State 50

   69 Factor: Expo .
   70       | Expo . AFOP Factor

    '^'  shift, and go to state 91

    $default  reduce using rule 69 (Factor)

    AFOP  go to state 92


State 51

   73 Expo: ANOP . Expo

    Ident     shift, and go to state 34
    IntLit    shift, and go to state 35
    BoolLit   shift, and go to state 36
    StrLit    shift, and go to state 37
    FloatLit  shift, and go to state 38
    '('       shift, and go to state 39
    '-'       shift, and go to state 40
    '!'       shift, and go to state 41

    Expo     go to state 93
    ANOP     go to state 51
    RNOP     go to state 52
    PStmt    go to state 53
    Literal  go to state 54
    Id       go to state 55


State 52

   74 Expo: RNOP . Expo

    Ident     shift, and go to state 34
    IntLit    shift, and go to state 35
    BoolLit   shift, and go to state 36
    StrLit    shift, and go to state 37
    FloatLit  shift, and go to state 38
    '('       shift, and go to state 39
    '-'       shift, and go to state 40
    '!'       shift, and go to state 41

    Expo     go to state 94
    ANOP     go to state 51
    RNOP     go to state 52
    PStmt    go to state 53
    Literal  go to state 54
    Id       go to state 55


State 53

   72 Expo: PStmt .

    $default  reduce using rule 72 (Expo)


State 54

   77 PStmt: Literal .

    $default  reduce using rule 77 (PStmt)


State 55

   79 PStmt: Id . '[' Expr ']'
   80      | Id . '(' ExprSeq ')'
   81      | Id . '(' ')'

    '['  shift, and go to state 95
    '('  shift, and go to state 96


State 56

   26 PrintStmt: Print '(' . ExprSeq ')' ';'

    Ident     shift, and go to state 34
    IntLit    shift, and go to state 35
    BoolLit   shift, and go to state 36
    StrLit    shift, and go to state 37
    FloatLit  shift, and go to state 38
    '('       shift, and go to state 39
    '&'       shift, and go to state 97
    '-'       shift, and go to state 40
    '!'       shift, and go to state 41

    ExprSeq  go to state 98
    Expr     go to state 99
    BOExpr   go to state 43
    BAExpr   go to state 44
    BExpr    go to state 45
    OExpr    go to state 46
    Basic    go to state 47
    Term     go to state 48
    Factor   go to state 49
    Expo     go to state 50
    ANOP     go to state 51
    RNOP     go to state 52
    PStmt    go to state 53
    Literal  go to state 54
    Id       go to state 55


State 57

   28 PrintStmt: Println '(' . ')' ';'

    ')'  shift, and go to state 100


State 58

   29 PrintStmt: Printsp '(' . Expr ')' ';'

    Ident     shift, and go to state 34
    IntLit    shift, and go to state 35
    BoolLit   shift, and go to state 36
    StrLit    shift, and go to state 37
    FloatLit  shift, and go to state 38
    '('       shift, and go to state 39
    '-'       shift, and go to state 40
    '!'       shift, and go to state 41

    Expr     go to state 101
    BOExpr   go to state 43
    BAExpr   go to state 44
    BExpr    go to state 45
    OExpr    go to state 46
    Basic    go to state 47
    Term     go to state 48
    Factor   go to state 49
    Expo     go to state 50
    ANOP     go to state 51
    RNOP     go to state 52
    PStmt    go to state 53
    Literal  go to state 54
    Id       go to state 55


State 59

   27 PrintStmt: PrintStr '(' . Expr ')' ';'

    Ident     shift, and go to state 34
    IntLit    shift, and go to state 35
    BoolLit   shift, and go to state 36
    StrLit    shift, and go to state 37
    FloatLit  shift, and go to state 38
    '('       shift, and go to state 39
    '-'       shift, and go to state 40
    '!'       shift, and go to state 41

    Expr     go to state 102
    BOExpr   go to state 43
    BAExpr   go to state 44
    BExpr    go to state 45
    OExpr    go to state 46
    Basic    go to state 47
    Term     go to state 48
    Factor   go to state 49
    Expo     go to state 50
    ANOP     go to state 51
    RNOP     go to state 52
    PStmt    go to state 53
    Literal  go to state 54
    Id       go to state 55


State 60

   42 PickStmt: IF '(' . Expr ')' '{' StmtSeq '}'
   43         | IF '(' . Expr ')' '{' StmtSeq '}' ELSE '{' StmtSeq '}'

    Ident     shift, and go to state 34
    IntLit    shift, and go to state 35
    BoolLit   shift, and go to state 36
    StrLit    shift, and go to state 37
    FloatLit  shift, and go to state 38
    '('       shift, and go to state 39
    '-'       shift, and go to state 40
    '!'       shift, and go to state 41

    Expr     go to state 103
    BOExpr   go to state 43
    BAExpr   go to state 44
    BExpr    go to state 45
    OExpr    go to state 46
    Basic    go to state 47
    Term     go to state 48
    Factor   go to state 49
    Expo     go to state 50
    ANOP     go to state 51
    RNOP     go to state 52
    PStmt    go to state 53
    Literal  go to state 54
    Id       go to state 55


State 61

   44 IterStmt: WHILE '(' . Expr ')' '{' StmtSeq '}'

    Ident     shift, and go to state 34
    IntLit    shift, and go to state 35
    BoolLit   shift, and go to state 36
    StrLit    shift, and go to state 37
    FloatLit  shift, and go to state 38
    '('       shift, and go to state 39
    '-'       shift, and go to state 40
    '!'       shift, and go to state 41

    Expr     go to state 104
    BOExpr   go to state 43
    BAExpr   go to state 44
    BExpr    go to state 45
    OExpr    go to state 46
    Basic    go to state 47
    Term     go to state 48
    Factor   go to state 49
    Expo     go to state 50
    ANOP     go to state 51
    RNOP     go to state 52
    PStmt    go to state 53
    Literal  go to state 54
    Id       go to state 55


State 62

   39 ReturnStmt: Return Expr . ';'

    ';'  shift, and go to state 105


State 63

   18 StmtSeq: Stmt StmtSeq .

    $default  reduce using rule 18 (StmtSeq)


State 64

   40 AssignStmt: Id '[' . Expr ']' '=' Expr ';'

    Ident     shift, and go to state 34
    IntLit    shift, and go to state 35
    BoolLit   shift, and go to state 36
    StrLit    shift, and go to state 37
    FloatLit  shift, and go to state 38
    '('       shift, and go to state 39
    '-'       shift, and go to state 40
    '!'       shift, and go to state 41

    Expr     go to state 106
    BOExpr   go to state 43
    BAExpr   go to state 44
    BExpr    go to state 45
    OExpr    go to state 46
    Basic    go to state 47
    Term     go to state 48
    Factor   go to state 49
    Expo     go to state 50
    ANOP     go to state 51
    RNOP     go to state 52
    PStmt    go to state 53
    Literal  go to state 54
    Id       go to state 55


State 65

   41 AssignStmt: Id '=' . Expr ';'

    Ident     shift, and go to state 34
    IntLit    shift, and go to state 35
    BoolLit   shift, and go to state 36
    StrLit    shift, and go to state 37
    FloatLit  shift, and go to state 38
    '('       shift, and go to state 39
    '-'       shift, and go to state 40
    '!'       shift, and go to state 41

    Expr     go to state 107
    BOExpr   go to state 43
    BAExpr   go to state 44
    BExpr    go to state 45
    OExpr    go to state 46
    Basic    go to state 47
    Term     go to state 48
    Factor   go to state 49
    Expo     go to state 50
    ANOP     go to state 51
    RNOP     go to state 52
    PStmt    go to state 53
    Literal  go to state 54
    Id       go to state 55


State 66

    6 VarDecl: TypeSpecifier VarDeclId ';' .

    $default  reduce using rule 6 (VarDecl)


State 67

    8 VarDeclId: Id '[' . AryNumber ']'

    IntLit  shift, and go to state 108

    AryNumber  go to state 109


State 68

    9 FuncDecl: TypeSpecifier Id '(' . FuncParams ')' Declarations '{' StmtSeq '}'
   10         | TypeSpecifier Id '(' . ')' Declarations '{' StmtSeq '}'

    Int    shift, and go to state 1
    Bool   shift, and go to state 2
    Float  shift, and go to state 3
    ')'    shift, and go to state 110

    FuncParams     go to state 111
    FuncDec        go to state 112
    TypeSpecifier  go to state 113


State 69

   34 ReadStmt: Read '(' IdSeq . ')' ';'
   36 IdSeq: IdSeq . ',' IdItem

    ')'  shift, and go to state 114
    ','  shift, and go to state 115


State 70

   35 IdSeq: IdItem .

    $default  reduce using rule 35 (IdSeq)


State 71

   37 IdItem: Id .
   38       | Id . '[' Expr ']'

    '['  shift, and go to state 116

    $default  reduce using rule 37 (IdItem)


State 72

   78 PStmt: '(' Expr . ')'

    ')'  shift, and go to state 117


State 73

   30 PrintStmt: Write Expr ';' .

    $default  reduce using rule 30 (PrintStmt)


State 74

   46 BOExpr: BOExpr OR . BAExpr

    Ident     shift, and go to state 34
    IntLit    shift, and go to state 35
    BoolLit   shift, and go to state 36
    StrLit    shift, and go to state 37
    FloatLit  shift, and go to state 38
    '('       shift, and go to state 39
    '-'       shift, and go to state 40
    '!'       shift, and go to state 41

    BAExpr   go to state 118
    BExpr    go to state 45
    OExpr    go to state 46
    Basic    go to state 47
    Term     go to state 48
    Factor   go to state 49
    Expo     go to state 50
    ANOP     go to state 51
    RNOP     go to state 52
    PStmt    go to state 53
    Literal  go to state 54
    Id       go to state 55


State 75

   48 BAExpr: BAExpr AND . BExpr

    Ident     shift, and go to state 34
    IntLit    shift, and go to state 35
    BoolLit   shift, and go to state 36
    StrLit    shift, and go to state 37
    FloatLit  shift, and go to state 38
    '('       shift, and go to state 39
    '-'       shift, and go to state 40
    '!'       shift, and go to state 41

    BExpr    go to state 119
    OExpr    go to state 46
    Basic    go to state 47
    Term     go to state 48
    Factor   go to state 49
    Expo     go to state 50
    ANOP     go to state 51
    RNOP     go to state 52
    PStmt    go to state 53
    Literal  go to state 54
    Id       go to state 55


State 76

   52 REOP: EQ .

    $default  reduce using rule 52 (REOP)


State 77

   53 REOP: NEQ .

    $default  reduce using rule 53 (REOP)


State 78

   51 BExpr: BExpr REOP . OExpr

    Ident     shift, and go to state 34
    IntLit    shift, and go to state 35
    BoolLit   shift, and go to state 36
    StrLit    shift, and go to state 37
    FloatLit  shift, and go to state 38
    '('       shift, and go to state 39
    '-'       shift, and go to state 40
    '!'       shift, and go to state 41

    OExpr    go to state 120
    Basic    go to state 47
    Term     go to state 48
    Factor   go to state 49
    Expo     go to state 50
    ANOP     go to state 51
    RNOP     go to state 52
    PStmt    go to state 53
    Literal  go to state 54
    Id       go to state 55


State 79

   58 RCOP: LTE .

    $default  reduce using rule 58 (RCOP)


State 80

   59 RCOP: GTE .

    $default  reduce using rule 59 (RCOP)


State 81

   56 RCOP: '<' .

    $default  reduce using rule 56 (RCOP)


State 82

   57 RCOP: '>' .

    $default  reduce using rule 57 (RCOP)


State 83

   55 OExpr: OExpr RCOP . Basic

    Ident     shift, and go to state 34
    IntLit    shift, and go to state 35
    BoolLit   shift, and go to state 36
    StrLit    shift, and go to state 37
    FloatLit  shift, and go to state 38
    '('       shift, and go to state 39
    '-'       shift, and go to state 40
    '!'       shift, and go to state 41

    Basic    go to state 121
    Term     go to state 48
    Factor   go to state 49
    Expo     go to state 50
    ANOP     go to state 51
    RNOP     go to state 52
    PStmt    go to state 53
    Literal  go to state 54
    Id       go to state 55


State 84

   62 ABOP: '+' .

    $default  reduce using rule 62 (ABOP)


State 85

   63 ABOP: '-' .

    $default  reduce using rule 63 (ABOP)


State 86

   61 Basic: Basic ABOP . Term

    Ident     shift, and go to state 34
    IntLit    shift, and go to state 35
    BoolLit   shift, and go to state 36
    StrLit    shift, and go to state 37
    FloatLit  shift, and go to state 38
    '('       shift, and go to state 39
    '-'       shift, and go to state 40
    '!'       shift, and go to state 41

    Term     go to state 122
    Factor   go to state 49
    Expo     go to state 50
    ANOP     go to state 51
    RNOP     go to state 52
    PStmt    go to state 53
    Literal  go to state 54
    Id       go to state 55


State 87

   66 ATOP: '*' .

    $default  reduce using rule 66 (ATOP)


State 88

   67 ATOP: '/' .

    $default  reduce using rule 67 (ATOP)


State 89

   68 ATOP: '%' .

    $default  reduce using rule 68 (ATOP)


State 90

   65 Term: Term ATOP . Factor

    Ident     shift, and go to state 34
    IntLit    shift, and go to state 35
    BoolLit   shift, and go to state 36
    StrLit    shift, and go to state 37
    FloatLit  shift, and go to state 38
    '('       shift, and go to state 39
    '-'       shift, and go to state 40
    '!'       shift, and go to state 41

    Factor   go to state 123
    Expo     go to state 50
    ANOP     go to state 51
    RNOP     go to state 52
    PStmt    go to state 53
    Literal  go to state 54
    Id       go to state 55


State 91

   71 AFOP: '^' .

    $default  reduce using rule 71 (AFOP)


State 92

   70 Factor: Expo AFOP . Factor

    Ident     shift, and go to state 34
    IntLit    shift, and go to state 35
    BoolLit   shift, and go to state 36
    StrLit    shift, and go to state 37
    FloatLit  shift, and go to state 38
    '('       shift, and go to state 39
    '-'       shift, and go to state 40
    '!'       shift, and go to state 41

    Factor   go to state 124
    Expo     go to state 50
    ANOP     go to state 51
    RNOP     go to state 52
    PStmt    go to state 53
    Literal  go to state 54
    Id       go to state 55


State 93

   73 Expo: ANOP Expo .

    $default  reduce using rule 73 (Expo)


State 94

   74 Expo: RNOP Expo .

    $default  reduce using rule 74 (Expo)


State 95

   79 PStmt: Id '[' . Expr ']'

    Ident     shift, and go to state 34
    IntLit    shift, and go to state 35
    BoolLit   shift, and go to state 36
    StrLit    shift, and go to state 37
    FloatLit  shift, and go to state 38
    '('       shift, and go to state 39
    '-'       shift, and go to state 40
    '!'       shift, and go to state 41

    Expr     go to state 125
    BOExpr   go to state 43
    BAExpr   go to state 44
    BExpr    go to state 45
    OExpr    go to state 46
    Basic    go to state 47
    Term     go to state 48
    Factor   go to state 49
    Expo     go to state 50
    ANOP     go to state 51
    RNOP     go to state 52
    PStmt    go to state 53
    Literal  go to state 54
    Id       go to state 55


State 96

   80 PStmt: Id '(' . ExprSeq ')'
   81      | Id '(' . ')'

    Ident     shift, and go to state 34
    IntLit    shift, and go to state 35
    BoolLit   shift, and go to state 36
    StrLit    shift, and go to state 37
    FloatLit  shift, and go to state 38
    '('       shift, and go to state 39
    ')'       shift, and go to state 126
    '&'       shift, and go to state 97
    '-'       shift, and go to state 40
    '!'       shift, and go to state 41

    ExprSeq  go to state 127
    Expr     go to state 99
    BOExpr   go to state 43
    BAExpr   go to state 44
    BExpr    go to state 45
    OExpr    go to state 46
    Basic    go to state 47
    Term     go to state 48
    Factor   go to state 49
    Expo     go to state 50
    ANOP     go to state 51
    RNOP     go to state 52
    PStmt    go to state 53
    Literal  go to state 54
    Id       go to state 55


State 97

   32 ExprSeq: '&' . Expr

    Ident     shift, and go to state 34
    IntLit    shift, and go to state 35
    BoolLit   shift, and go to state 36
    StrLit    shift, and go to state 37
    FloatLit  shift, and go to state 38
    '('       shift, and go to state 39
    '-'       shift, and go to state 40
    '!'       shift, and go to state 41

    Expr     go to state 128
    BOExpr   go to state 43
    BAExpr   go to state 44
    BExpr    go to state 45
    OExpr    go to state 46
    Basic    go to state 47
    Term     go to state 48
    Factor   go to state 49
    Expo     go to state 50
    ANOP     go to state 51
    RNOP     go to state 52
    PStmt    go to state 53
    Literal  go to state 54
    Id       go to state 55


State 98

   26 PrintStmt: Print '(' ExprSeq . ')' ';'
   33 ExprSeq: ExprSeq . ',' Expr

    ')'  shift, and go to state 129
    ','  shift, and go to state 130


State 99

   31 ExprSeq: Expr .

    $default  reduce using rule 31 (ExprSeq)


State 100

   28 PrintStmt: Println '(' ')' . ';'

    ';'  shift, and go to state 131


State 101

   29 PrintStmt: Printsp '(' Expr . ')' ';'

    ')'  shift, and go to state 132


State 102

   27 PrintStmt: PrintStr '(' Expr . ')' ';'

    ')'  shift, and go to state 133


State 103

